# flaskriver

./: .gitlab-ci.yml  LICENSE  README.md  example.py  mkdocs.yml  pyproject.toml
docs/: .pages  index.html  index.md
docs/API/: .pages  ClassificationInterface.md  Interface.md  RegressionInterface.md
docs/Introduction/: .pages  Installation.md  Quickstart.md  Serving.md
docs/Releases/: .pages  0.0.4.md
docs/overrides/: home.html
docs/overrides/partials/: footer.html
flaskriver/: ClassificationInterface.py  Interface.py  RegressionInterface.py  Wrapper.py  __init__.py
tests/: requirements.txt  test_classification.py  test_flaskriver.py  test_regression.py
