[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flaskriver"
authors = [{name = "Sebastian Wette ", email = "mail@sebastianwette.de"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["flask"]

[project.urls]
Home = "https://deduce.de"
